2003-01-24  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-do-move): undo wrong optimization, fix
	problem with non working exclusions.

2002-12-13  Lennart Staflin  <lenst@lysator.liu.se>

	* Version 1.3.1 released

2002-09-19  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-parse-prolog): Check if sgml-dtd-info is
	nil before trying to use it.

2002-08-13  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-edit.el (sgml-edit-attrib-abort): new command
	(sgml-edit-attrib-mode-map): abort on key C-c C-k
	(sgml-attribute-buffer): include abort key in header line and use
	substitute-command-keys.
	(sgml-edit-attributes): move setting mode to
	sgml-attribute-buffer.

	* psgml-parse.el (sgml-open-element): add optional net-enabled
	parameter.
	(sgml-do-start-tag): use new parameter on sgml-open-element.
	Fixes bug with NET (tc17).
	
	* psgml-edit.el (sgml-edit-attrib-field-start,
	sgml-edit-attrib-clear, sgml-attribute-buffer,
	sgml-edit-attrib-specification-list): change sgml-category to
	category. Fix bug with edit attributes.
	(sgml-change-element-name): insert TAGC before finding new element
	object. Fix bug with change element name not copying attributes.

2002-05-08  Lennart Staflin  <lenst@lysator.liu.se>

	* Version 1.3.0 released
	
	* psgml.el (sgml-default-nonsticky): moved from psgml-other.el

2002-05-07  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-maint.el (psgml-common-files): add psgml-sysdep
	(psgml-find-source-dir): fix version

2002-04-26  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml.el (sgml-mode): make adding to
	text-property-default-nonsticky conditional on
	sgml-default-nonsticky to work with Emacs < 21.
	
2002-04-25  Lennart Staflin  <lenst@lysator.liu.se>

	fixing merge of Dave Love's patch.
	
2002-02-08  Dave Love  <fx@gnu.org>
	[Merging from 1.2.4 branch /lenst]
	
	Changes for various things: Useful DTD-less XML editing; avoiding
	CL at runtime; some Emacs portability; Mule-related fixes,